--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body onload="reset()"> 
     <div id="outer">
         <div id="logo">
-            <img id="img" src="img/logo.png">
+            <img id="img" src="logo.png">
         </div>
         <div id="titel"><h1>Beoordelingsformulier: De vlog</h1></div>
         <div id="score">
