--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body onload="reset()"> 
     <div id="outer">
         <div id="logo">
-            <img id="img" src="logo.png">
+            <img id="img" src="img/logo.png">
         </div>
         <div id="titel"><h1>Beoordelingsformulier: De vlog</h1></div>
         <div id="score">
@@ -73,14 +73,14 @@
                     <td class="green">      <input type="radio" name="4" value="G1" onclick="counter_one()"></td> 
                     <td class="yellow">     <input type="radio" name="4" value="Y1" onclick="counter_one()"></td> 
                     <td class="red">        <input type="radio" name="4" value="R1" onclick="counter_one()"></td>
-                    <td>Geen Sluikreclame aanwezig/td>
+                    <td>Geen Sluikreclame aanwezig</td>
                 </tr>
                 <tr>
-                    <td>De leerling is enthousiast en verteld gepassioneerd over het boek</td>
+                    <td>De leerling is enthousiast en vertelt gepassioneerd over het boek</td>
                     <td class="green">      <input type="radio" name="5" value="G1" onclick="counter_one()"></td> 
                     <td class="yellow">     <input type="radio" name="5" value="Y1" onclick="counter_one()"></td> 
                     <td class="red">        <input type="radio" name="5" value="R1" onclick="counter_one()"></td>
-                    <td>De leerling is niet enthousiast en verteld niet gepassioneerd over het boek</td>
+                    <td>De leerling is niet enthousiast en vertelt niet gepassioneerd over het boek</td>
                 </tr>
                 <tr>
                     <td>Leuke, aantrekkelijke creatieve vlog</td>
