--- a/index.html
+++ b/index.html
@@ -41,58 +41,74 @@
             <table>
                 <tr>
                     <td></td>
-                    <td class="green">      <p>2</p></td>
-                    <td class="yellow">     <p>1</p></td>
-                    <td class="red">        <p>0</p></td>
+                    <td class="green">      <p>2</p>    </td>
+                    <td class="green2">     <p>1,5</p>  </td>
+                    <td class="yellow">     <p>1</p>    </td>
+                    <td class="red2">       <p>0,5</p>  </td>
+                    <td class="red">        <p>0</p>    </td>
                     <td></td>
                 </tr>
             
                 <tr>
                     <td>De slogan is catchy, creatief</td>
-                    <td class="green">      <input type="radio" name="1" value="G1" onclick="counter_one()"></td> 
+                    <td class="green">      <input type="radio" name="1" value="G1" onclick="counter_one()"></td>
+                    <td class="green2">     <input type="radio" name="1" value="G2" onclick="counter_one()"></td>
                     <td class="yellow">     <input type="radio" name="1" value="Y1" onclick="counter_one()"></td> 
+                    <td class="red2">       <input type="radio" name="1" value="R2" onclick="counter_one()"></td>
                     <td class="red">        <input type="radio" name="1" value="R1" onclick="counter_one()"></td>
                     <td>De slogan is niet creatief</td>
                 </tr>
                 <tr>
                     <td>Stijlfiguren (x2) aanwezig</td>
-                    <td class="green">      <input type="radio" name="2" value="G1" onclick="counter_one()"></td> 
+                    <td class="green">      <input type="radio" name="2" value="G1" onclick="counter_one()"></td>
+                    <td class="green2">     <input type="radio" name="2" value="G2" onclick="counter_one()"></td> 
                     <td class="yellow">     <input type="radio" name="2" value="Y1" onclick="counter_one()"></td> 
+                    <td class="red2">       <input type="radio" name="2" value="R2" onclick="counter_one()"></td>
                     <td class="red">        <input type="radio" name="2" value="R1" onclick="counter_one()"></td>
                     <td>Stijlfiguren (x2) niet aanwezig</td>
                 </tr>
                 <tr>
                     <td>Vergeleken met andere producten</td>
-                    <td class="green">      <input type="radio" name="3" value="G1" onclick="counter_one()"></td> 
-                    <td class="yellow">     <input type="radio" name="3" value="Y1" onclick="counter_one()"></td> 
+                    <td class="green">      <input type="radio" name="3" value="G1" onclick="counter_one()"></td>
+                    <td class="green2">     <input type="radio" name="3" value="G2" onclick="counter_one()"></td> 
+                    <td class="yellow">     <input type="radio" name="3" value="Y1" onclick="counter_one()"></td>
+                    <td class="red2">       <input type="radio" name="3" value="R2" onclick="counter_one()"></td> 
                     <td class="red">        <input type="radio" name="3" value="R1" onclick="counter_one()"></td>
                     <td>Niet vergeleken met andere producten</td>
                 </tr>
                 <tr>
                     <td>Sluikreclame (prod naar keuze)</td>
-                    <td class="green">      <input type="radio" name="4" value="G1" onclick="counter_one()"></td> 
+                    <td class="green">      <input type="radio" name="4" value="G1" onclick="counter_one()"></td>
+                    <td class="green2">     <input type="radio" name="4" value="G2" onclick="counter_one()"></td> 
                     <td class="yellow">     <input type="radio" name="4" value="Y1" onclick="counter_one()"></td> 
+                    <td class="red2">       <input type="radio" name="4" value="R2" onclick="counter_one()"></td>
                     <td class="red">        <input type="radio" name="4" value="R1" onclick="counter_one()"></td>
                     <td>Geen Sluikreclame aanwezig</td>
                 </tr>
                 <tr>
                     <td>De leerling is enthousiast en vertelt gepassioneerd over het boek</td>
-                    <td class="green">      <input type="radio" name="5" value="G1" onclick="counter_one()"></td> 
+                    <td class="green">      <input type="radio" name="5" value="G1" onclick="counter_one()"></td>
+                    <td class="green2">     <input type="radio" name="5" value="G2" onclick="counter_one()"></td> 
                     <td class="yellow">     <input type="radio" name="5" value="Y1" onclick="counter_one()"></td> 
+                    <td class="red2">       <input type="radio" name="5" value="R2" onclick="counter_one()"></td>
                     <td class="red">        <input type="radio" name="5" value="R1" onclick="counter_one()"></td>
                     <td>De leerling is niet enthousiast en vertelt niet gepassioneerd over het boek</td>
                 </tr>
                 <tr>
                     <td>Leuke, aantrekkelijke creatieve vlog</td>
                     <td class="green">      <input type="radio" name="6" value="G1" onclick="counter_one()"></td> 
+                    <td class="green2">     <input type="radio" name="6" value="G2" onclick="counter_one()"></td>
                     <td class="yellow">     <input type="radio" name="6" value="Y1" onclick="counter_one()"></td> 
+                    <td class="red2">       <input type="radio" name="6" value="R2" onclick="counter_one()"></td>
                     <td class="red">        <input type="radio" name="6" value="R1" onclick="counter_one()"></td>
                     <td>Saaie, niet creatieve vlog</td>
                 </tr>
                 <tr>
                     <td >De vlog duurt tussen 30 seconden en 1 minuut</td>
                     <td class="green">      <input type="radio" name="7" value="G1" onclick="counter_one()"></td> 
+                    <td class="green2">     <input type="radio" name="7" value="G2" onclick="counter_one()"></td>
                     <td class="yellow">     <input type="radio" name="7" value="Y1" onclick="counter_one()"></td> 
+                    <td class="red2">       <input type="radio" name="7" value="R2" onclick="counter_one()"></td>
                     <td class="red">        <input type="radio" name="7" value="R1" onclick="counter_one()"></td>
                     <td>De vlog is te kort / te lang</td>
                 </tr>
